--- a/src/Effects/Effects/Effects.csproj
+++ b/src/Effects/Effects/Effects.csproj
@@ -36,22 +36,22 @@
     <DocumentationFile>bin\Release\FormsCommunityToolkit.Effects.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="BlurEffect.cs" />
-    <Compile Include="ChangeColorEffect.cs" />
-    <Compile Include="ClearEntryEffect.cs" />
+    <Compile Include="View\ViewBlur.cs" />
+    <Compile Include="Switch\SwitchChangeColor.cs" />
+    <Compile Include="Entry\EntryClear.cs" />
     <Compile Include="EffectIds.cs" />
-    <Compile Include="MultiLineLabelEffect.cs" />
+    <Compile Include="Label\LabelMultiLine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RemoveEntryLineEffect.cs" />
-    <Compile Include="CapitializeKeyboardEffect.cs" />
-    <Compile Include="RemoveBorderEffect.cs" />
-    <Compile Include="DisableAutoCorrectEffect.cs" />
-    <Compile Include="SearchBarSuggestionEffect.cs" />
-    <Compile Include="SizeFontToFitEffect.cs" />
-    <Compile Include="CustomFontEffect.cs" />
-    <Compile Include="ItalicPlaceholderEffect.cs" />
-    <Compile Include="SelectAllTextEntryEffect.cs" />
-    <Compile Include="ChangePickerColorEffect.cs" />
+    <Compile Include="Entry\EntryRemoveLine.cs" />
+    <Compile Include="Entry\EntryCapitializeKeyboard.cs" />
+    <Compile Include="Entry\EntryRemoveBorder.cs" />
+    <Compile Include="Entry\EntryDisableAutoCorrect.cs" />
+    <Compile Include="SearchBar\SearchBarSuggestion.cs" />
+    <Compile Include="Label\LabelSizeFontToFit.cs" />
+    <Compile Include="Label\LabelCustomFont.cs" />
+    <Compile Include="Entry\EntryItalicPlaceholder.cs" />
+    <Compile Include="Entry\EntrySelectAllText.cs" />
+    <Compile Include="Picker\PickerChangeColor.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
