--- a/nuget/Controls.nuspec
+++ b/nuget/Controls.nuspec
@@ -3,12 +3,12 @@
    <metadata minClientVersion="2.8.1">
        <id>FormsCommunityToolkit.Controls</id>
        <version>$version$</version>
-       <title>Forms Community Toolkit Controls for Xamarin.Forms</title>
+       <title>Xamarin.Forms Community Toolkit: Controls</title>
        <authors>FormsCommunityToolkit</authors>
        <owners>FormsCommunityToolkit</owners>
-       <projectUrl>https://github.com/FormsCommunityToolkit/Controls</projectUrl>
-       <licenseUrl>https://github.com/FormsCommunityToolkit/Controls/blob/master/LICENSE</licenseUrl>
-       <iconUrl>https://github.com/FormsCommunityToolkit/Effects/blob/master/Media/OrganonLogo.64x64.png</iconUrl>
+       <projectUrl>https://github.com/FormsCommunityToolkit/FormsCommunityToolkit</projectUrl>
+       <licenseUrl>https://github.com/FormsCommunityToolkit/FormsCommunityToolkit/blob/master/LICENSE</licenseUrl>
+       <iconUrl>https://github.com/FormsCommunityToolkit/FormsCommunityToolkit/blob/master/Media/OrganonLogo.64x64.png</iconUrl>
        <requireLicenseAcceptance>false</requireLicenseAcceptance>
        <description>
          Xamarin.Forms Community Toolkit: Controls
