--- a/nuget/Behaviors.nuspec
+++ b/nuget/Behaviors.nuspec
@@ -11,10 +11,10 @@
        <iconUrl>https://github.com/FormsCommunityToolkit/FormsCommunityToolkit/blob/master/Media/OrganonLogo.64x64.png</iconUrl>
        <requireLicenseAcceptance>false</requireLicenseAcceptance>
        <description>
-         Xamarin.Forms Community Toolkit: Behaviors
+         Xamarin.Forms Community Toolkit Behaviors Library
          Built against: 2.3.2.127
        </description>
-       <summary>Xamarin.Forms Community Toolkit: Behaviors</summary>
+       <summary>Xamarin.Forms Community Toolkit Behaviors Library</summary>
        <tags>community, toolkit, xamarin, pcl, android, xamarin.forms, ios, uwp, onverters</tags>
        <dependencies>
          <dependency id="Xamarin.Forms" version="2.3.2.127" />
