--- a/nuget/Converters.nuspec
+++ b/nuget/Converters.nuspec
@@ -11,10 +11,10 @@
        <iconUrl>https://github.com/FormsCommunityToolkit/FormsCommunityToolkit/blob/master/Media/OrganonLogo.64x64.png</iconUrl>
        <requireLicenseAcceptance>false</requireLicenseAcceptance>
        <description>
-         Forms Community Toolkit Converters for Xamarin.Forms
+         Xamarin.Forms Community Toolkit Converters Library
          Built against: 2.3.2.127
        </description>
-       <summary>Converters for Xamarin.Forms</summary>
+       <summary>Xamarin.Forms Community Toolkit Converters Library</summary>
        <tags>community, toolkit, xamarin, pcl, android, xamarin.forms, ios, uwp, onverters</tags>
        <dependencies>
          <dependency id="Xamarin.Forms" version="2.3.2.127" />
