--- a/src/Animations/Animations/Animations.csproj
+++ b/src/Animations/Animations/Animations.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Extensions\AnimationExtension.cs" />
     <Compile Include="Helpers\EasingHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Triggers\BeginAnimation.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
