Effect sample Entry italic placeholder

--- a/Samples/Samples/Samples/Samples.csproj
+++ b/Samples/Samples/Samples/Samples.csproj
@@ -50,6 +50,9 @@
     <Compile Include="Views\EffectsEntryDisableAutoCorrectPage.xaml.cs">
       <DependentUpon>EffectsEntryDisableAutoCorrectPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\EffectsEntryItalicPlaceholderPage.xaml.cs">
+      <DependentUpon>EffectsEntryItalicPlaceholderPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\EffectsEntryPage.xaml.cs">
       <DependentUpon>EffectsEntryPage.xaml</DependentUpon>
     </Compile>
@@ -148,6 +151,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\EffectsEntryDisableAutoCorrectPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\EffectsEntryItalicPlaceholderPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
