Add simple checkbox control

--- a/src/Controls/Controls.UWP/Controls.UWP.csproj
+++ b/src/Controls/Controls.UWP/Controls.UWP.csproj
@@ -111,6 +111,9 @@
     <EmbeddedResource Include="Properties\Controls.UWP.rd.xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckBoxRenderer.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Controls\Controls.csproj">
       <Project>{f63546cb-8e7f-49a3-a50f-1e6fdb80ebc4}</Project>
       <Name>Controls</Name>
