--- a/src/Controls/Controls.iOS/Controls.iOS.csproj
+++ b/src/Controls/Controls.iOS/Controls.iOS.csproj
@@ -55,6 +55,10 @@
     <Folder Include="Resources\" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckBoxRenderer.cs" />
+    <Compile Include="Views\CheckBoxView.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Controls\Controls.csproj">
       <Project>{f63546cb-8e7f-49a3-a50f-1e6fdb80ebc4}</Project>
       <Name>Controls</Name>
@@ -62,6 +66,26 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ImageAsset Include="Resources\Media.xcassets\CheckedCheckbox.imageset\checked_checkbox.png">
+      <InProject>false</InProject>
+    </ImageAsset>
+    <ImageAsset Include="Resources\Media.xcassets\CheckedCheckbox.imageset\checked_checkbox@2x.png">
+      <InProject>false</InProject>
+    </ImageAsset>
+    <ImageAsset Include="Resources\Media.xcassets\CheckedCheckbox.imageset\Contents.json">
+      <InProject>false</InProject>
+    </ImageAsset>
+    <ImageAsset Include="Resources\Media.xcassets\UncheckedCheckbox.imageset\Contents.json">
+      <InProject>false</InProject>
+    </ImageAsset>
+    <ImageAsset Include="Resources\Media.xcassets\UncheckedCheckbox.imageset\unchecked_checkbox.png">
+      <InProject>false</InProject>
+    </ImageAsset>
+    <ImageAsset Include="Resources\Media.xcassets\UncheckedCheckbox.imageset\unchecked_checkbox@2x.png">
+      <InProject>false</InProject>
+    </ImageAsset>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
