--- a/src/Controls/Controls.Android/Controls.Android.csproj
+++ b/src/Controls/Controls.Android/Controls.Android.csproj
@@ -104,6 +104,9 @@
     <None Include="Resources\AboutResources.txt" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckBoxRenderer.cs" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Controls\Controls.csproj">
       <Project>{f63546cb-8e7f-49a3-a50f-1e6fdb80ebc4}</Project>
       <Name>Controls</Name>
