--- a/Samples/Samples/Samples.Android/Samples.Android.csproj
+++ b/Samples/Samples/Samples.Android/Samples.Android.csproj
@@ -10,8 +10,8 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FormsCommunityToolkit.Samples.Droid</RootNamespace>
-    <AssemblyName>FormsCommunityToolkit.Samples.Android</AssemblyName>
+    <RootNamespace>XamarinCommunityToolkit.Samples.Droid</RootNamespace>
+    <AssemblyName>XamarinCommunityToolkit.Samples.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <AndroidApplication>true</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
