--- a/Samples/Samples/Samples.UWP/Samples.UWP.csproj
+++ b/Samples/Samples/Samples.UWP/Samples.UWP.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{69C42532-A922-46CC-8248-2E13F3796B97}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FormsCommunityToolkit.Samples.UWP</RootNamespace>
-    <AssemblyName>FormsCommunityToolkit.Samples.UWP</AssemblyName>
+    <RootNamespace>XamarinCommunityToolkit.Samples.UWP</RootNamespace>
+    <AssemblyName>XamarinCommunityToolkit.Samples.UWP</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion>10.0.16299.0</TargetPlatformVersion>
