--- a/Samples/Samples/Samples.iOS/Info.plist
+++ b/Samples/Samples/Samples.iOS/Info.plist
@@ -23,9 +23,9 @@
     <key>MinimumOSVersion</key>
     <string>8.0</string>
     <key>CFBundleDisplayName</key>
-    <string>FormsCommunityToolkit.Samples</string>
+    <string>XamarinCommunityToolkit.Samples</string>
     <key>CFBundleIdentifier</key>
-    <string>com.yourcompany.FormsCommunityToolkit.Samples</string>
+    <string>com.yourcompany.XamarinCommunityToolkit.Samples</string>
     <key>CFBundleVersion</key>
     <string>1.0</string>
     <key>CFBundleIconFiles</key>
