--- a/nuget/Converters.nuspec
+++ b/nuget/Converters.nuspec
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata minClientVersion="2.8.1">
-       <id>FormsCommunityToolkit.Converters</id>
+       <id>XamarinCommunityToolkit.Converters</id>
        <version>$version$</version>
-       <title>Xamarin.Forms Community Toolkit: Converters</title>
-       <authors>FormsCommunityToolkit</authors>
-       <owners>FormsCommunityToolkit</owners>
-       <projectUrl>https://github.com/FormsCommunityToolkit/FormsCommunityToolkit</projectUrl>
-       <licenseUrl>https://github.com/FormsCommunityToolkit/FormsCommunityToolkit/blob/master/LICENSE</licenseUrl>
-       <iconUrl>https://github.com/FormsCommunityToolkit/FormsCommunityToolkit/blob/master/Media/OrganonLogo.64x64.png</iconUrl>
+       <title>Xamarin Community Toolkit: Converters</title>
+       <authors>XamarinCommunityToolkit</authors>
+       <owners>XamarinCommunityToolkit</owners>
+       <projectUrl>https://github.com/xamarin/XamarinCommunityToolkit</projectUrl>
+       <licenseUrl>https://github.com/xamarin/XamarinCommunityToolkit/blob/master/LICENSE</licenseUrl>
+       <iconUrl>https://github.com/xamarin/XamarinCommunityToolkit/blob/master/Media/OrganonLogo.64x64.png</iconUrl>
        <requireLicenseAcceptance>false</requireLicenseAcceptance>
        <description>
-         Xamarin.Forms Community Toolkit Converters Library
-         Built against: 2.3.2.127
+         Xamarin Community Toolkit Converters Library
+         Built against: 2.5.0.122203
        </description>
-       <summary>Xamarin.Forms Community Toolkit Converters Library</summary>
-       <tags>community, toolkit, xamarin, pcl, android, xamarin.forms, ios, uwp, onverters</tags>
+       <summary>Xamarin Community Toolkit Converters Library</summary>
+       <tags>community, toolkit, xamarin, pcl, android, xamarin.forms, ios, uwp, converters</tags>
        <dependencies>
-         <dependency id="Xamarin.Forms" version="2.3.2.127" />
+         <dependency id="Xamarin.Forms" version="2.5.0.122203" />
        </dependencies>
      <releaseNotes>
      </releaseNotes>
    </metadata>
    <files>
       <!--Core-->
-     <file src="src/Converters/Converters/bin/Release/FormsCommunityToolkit.Converters.dll" target="lib/portable-net45+wp80+win8+wpa81/FormsCommunityToolkit.Converters.dll" />
-     <file src="src/Converters/Converters/bin/Release/FormsCommunityToolkit.Converters.xml" target="lib/portable-net45+wp80+win8+wpa81/FormsCommunityToolkit.Converters.xml" />
-     <file src="src/Converters/Converters/bin/Release/FormsCommunityToolkit.Converters.pdb" target="lib/portable-net45+wp80+win8+wpa81/FormsCommunityToolkit.Converters.pdb" />
+     <file src="src\Converters\Converters\bin\Release\XamarinCommunityToolkit.Converters.dll" target="lib\netstandard2.0" /> 
+     <file src="src\Converters\Converters\bin\Release\XamarinCommunityToolkit.Converters.xml" target="lib\netstandard2.0" />
+     <file src="src\Converters\Converters\bin\Release\XamarinCommunityToolkit.Converters.pdb" target="lib\netstandard2.0" />
    </files>
 </package>
